# dpdumperlib

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements-dev.txt
dpdumperlib/ic/: ic_loader.py
examples/brutus28/: PAL10x8.toml  PAL12x6.toml
tests/: conftest.py  test_ic_definition.py
tests/data/: incorrect_definition.toml
